Fix alignment of nav bar elements

--- a/public/support/home.css
+++ b/public/support/home.css
@@ -118,8 +118,13 @@ end of styles copied form perseus
   outline: none;
 }
 
+.navBarElms{
+     padding: 7px 5px 5px 5px;
+}
+
+
 .menuBar{
-    padding: 10px 10px 10px 10px;
+    padding: 5px 5px 5px 5px;
     width:100%;
     display:block;
     position:fixed;
@@ -131,14 +136,15 @@ end of styles copied form perseus
     }
 .logo{
     float:left;
-    }
+}
+
 .nav{
     float:none;
     margin-right:10px;}
 .nav ul li{
     list-style:none;
     float:left;
-    }
+}
 
 html {
   height: 100%;
